--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "10.4.15",
     "next": "13.4.19",
     "postcss": "8.4.28",
